# shopify-mcp

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  BUILD_PLAN.md  Dockerfile  README.md  TECHNICAL_REQUIREMENTS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep  0001_initial_schema.py  0002_api_tokens.py  0003_refunds.py  0004_order_line_item_product_id_index.py  0005_orders_source_name.py  0006_orders_source_name_upper.py
app/: __init__.py  cli.py  config_mode.py  container.py
app/blueprints/api/: __init__.py  _middleware.py
app/blueprints/api/v1/: __init__.py  _params.py  _serialize.py  analytics.py  compare.py  inventory.py  orders.py  products.py  subscriptions.py
app/blueprints/dashboard/: __init__.py  filters.py  views.py
app/blueprints/dashboard/static/css/: ensemble.css  tokens.css
app/blueprints/dashboard/templates/dashboard/: _orders_rows.html  (+17 more)
app/blueprints/graphql/: __init__.py  schema.py
app/blueprints/webhooks/: __init__.py  views.py
app/db/: engine.py  unit_of_work.py
app/db/orm/: __init__.py  analytics.py  api_audit_log.py  api_token.py  base.py  customer.py  inventory.py  location.py  order.py  product.py  refund.py  store.py  subscription.py  sync_state.py  webhook_event.py
app/domain/: enums.py  models.py  repositories.py  specs.py
app/integrations/: __init__.py
app/integrations/ordergroove/: __init__.py  client.py
app/jobs/: queue.py
app/repositories/: __init__.py  _cursor.py  analytics.py  api_audit_log.py  api_tokens.py  customers.py  inventory.py  locations.py  orders.py  products.py  refunds.py  stores.py  subscriptions.py  sync_state.py  webhook_events.py
app/services/: _store_resolver.py  analytics.py  audit.py  auth.py  inventory_reporting.py  order_query.py  product_query.py  store_compare.py  store_query.py  subscription_query.py  sync.py  webhook_dispatcher.py  webhook_ingest.py
app/services/subscriptions/: __init__.py  base.py  ordergroove.py
app/shopify/: auth.py  bulk.py  client.py  config.py  errors.py  jsonl.py  live_paging.py  shopifyql.py  throttle.py  webhook_admin.py  webhooks.py
app/shopify/normalizers/: __init__.py  customers_bulk.py  inventory_paginated.py  orders.py  orders_bulk.py  products_bulk.py  refunds.py  shopifyql_sessions.py
app/shopify/repositories/: __init__.py  _base.py  _keyset.py  analytics.py  customers.py  inventory.py  locations.py  null.py  orders.py  products.py  refunds.py  store_index.py  stores.py  subscriptions.py  unit_of_work.py
docs/: custom_app_setup.md  design_extracted.txt  design_requirements.docx  discovery.md
installer/: README.md  _merge_config.py  env.example  install.ps1  install.sh
mcp_server/: __init__.py  __main__.py  audit.py  auth.py  dates.py  server.py
mcp_server/tools/: __init__.py  analytics.py  compare.py  inventory.py  live_ordergroove.py  live_shopify.py  orders.py  products.py  stores.py  subscriptions.py
scripts/: _extract_design.py  aggregate_orders_dryrun.py  backfill_order_42220.py  build_mcp_installer.ps1  debug_shopifyql.py  probe_order_42220.py  reconcile_drift_check.cmd  reconcile_drift_check.py  run_discovery_probes.py  smoke_test_bulk_full.py  smoke_test_bulk_sync.py  smoke_test_dispatcher.py  smoke_test_mcp_stdio.py  smoke_test_register_webhooks.py  smoke_test_repos.py  smoke_test_shopify.py  smoke_test_webhook.py  verify_line_item_resolution.py
tests/: conftest.py
tests/architecture/: test_layer_imports.py
tests/contract/: test_analytics_api.py  test_api_auth.py  test_compare_api.py  test_dashboard.py  test_dashboard_auth.py  test_dashboard_tokens.py  test_graphql_api.py  test_inventory_api.py  test_orders_api.py  test_products_api.py  test_subscriptions_api.py
tests/fakes/: __init__.py  repositories.py  test_protocol_conformance.py  unit_of_work.py
tests/unit/: test_analytics_service.py  test_audit_service.py  test_auth_service.py  test_config_discovery.py  test_dashboard_filters.py  test_inventory_reporting.py  test_live_repositories.py  test_live_uow_conformance.py  test_mcp_dates.py  test_mcp_live_tools.py  test_mcp_tools.py  test_mode_switch.py  test_normalize_refunds.py  test_order_aggregate.py  test_order_query.py  test_ordergroove_provider.py  test_orders_bulk_normalizer.py  test_refund_repository.py  test_shopifyql_sessions.py  test_store_compare.py  test_subscription_dispatcher.py  test_sync_refunds.py  test_sync_sessions.py
